# SPDX-FileCopyrightText: 2025 Intevation GmbH
#
# SPDX-License-Identifier: Apache-2.0

[project]
name = "isduba"
version = "0.1.0"
description = "Python client library for accessing the ISDuBA API"
license = { text = "Apache-2.0" }
authors = [
    { name = "Sebastian Wagner", email = "swagner@intevation.de" }
]
maintainers = []
readme = "README.md"
keywords = [ "csaf", "isduba" ]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security"
]
requires-python = ">=3.9"
dependencies = [
    "httpx (>=0.20.0,<0.29.0)",
    "attrs>=22.2.0",
    "python-dateutil (>=2.8.0,<3.0.0)"
]

[tool.poetry]
packages = [
    {include = "isduba"},
]
include = ["CHANGELOG.md", "isduba/py.typed"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]
